Add tape library implementations Add pool of robot and drive services Add interface to execute safe commands like status,...

--- a/sources/storage/cas-manager/pom.xml
+++ b/sources/storage/cas-manager/pom.xml
@@ -14,5 +14,6 @@
 	<modules>
 		<module>cas-manager-drivers</module>
 		<module>vitam-offer</module>
-	</modules>	
+		<module>cas-tape-library</module>
+	</modules>
 </project>
