Cherry-pick MR 5675 on R9

--- a/sources/functional-administration/functional-administration-contract/pom.xml
+++ b/sources/functional-administration/functional-administration-contract/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>assertj-core</artifactId>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>fr.gouv.vitam</groupId>
+            <artifactId>functional-administration-format-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
