Change checkParentLink with multiple value

--- a/sources/functional-administration/functional-administration-common/src/main/resources/ingestcontract-es-mapping.json
+++ b/sources/functional-administration/functional-administration-common/src/main/resources/ingestcontract-es-mapping.json
@@ -16,6 +16,9 @@
     "CheckParentLink": {
       "type": "keyword"
     },
+    "CheckParentId": {
+      "type": "keyword"
+    },
     "ArchiveProfiles": {
       "type": "keyword"
     },
