Item #5586 - external logbook * Endpoint added in AdmExtResource POST -> /logbookoperations * Same Endpoing added in AdmIntResource -> calling internal logbook * Unit Tests and Integration Tests added * Permissions updated * Cucumber declaration added in order to test an external logbook creation * Raml updated

--- a/sources/access/access-external/access-external-client/pom.xml
+++ b/sources/access/access-external/access-external-client/pom.xml
@@ -46,6 +46,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>fr.gouv.vitam</groupId>
+			<artifactId>logbook-common</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 		</dependency>
