--- a/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
+++ b/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
@@ -106,3 +106,5 @@ permissionsWithoutPersonalCertificate:
   - 'preservation:update'
   - 'accessionregisterssymbolic:read'
   - 'batchreport:id:read'
+  - 'preservationreport:id:read'
+  - 'logbookoperations:create'
