--- a/sources/storage/cas-manager/cas-tape-library/pom.xml
+++ b/sources/storage/cas-manager/cas-tape-library/pom.xml
@@ -2,14 +2,26 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>cas-manager</artifactId>
         <groupId>fr.gouv.vitam</groupId>
+        <artifactId>cas-manager</artifactId>
         <version>2.3.0-SNAPSHOT</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>cas-tape-library</artifactId>
+    <name>Storage Tape Library</name>
+    <properties>
+        <unix.name>offer</unix.name>
+        <unix.user>vitam</unix.user>
+        <unix.group>vitam</unix.group>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-compress</artifactId>
+        </dependency>
+    </dependencies>
 
 
 </project>
