--- a/deployment/ansible-vitam/roles/kibana/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/kibana/tasks/main.yml
@@ -20,9 +20,9 @@
 - import_tasks: migrate_kibana_5.yml
   when: is_installed.stdout.find('5.6.') != -1
 
-- name: Install kibana package from repo
+- name: Install vitam-kibana package from repo
   package:
-    name: kibana
+    name: vitam-kibana
     state: latest
   notify:
     - restart kibana
