Integration tests for tape library

--- a/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
+++ b/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
@@ -18,16 +18,20 @@ tapeLibraries:
 
         drives:
             -
+                index: 0
                 device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800001-nst
                 mtPath: "/bin/mt"
                 ddPath: "/bin/dd"
                 tarPath: "/bin/tar"
                 timeoutInMilliseconds: 60000
             -
+                index: 1
                 device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800002-nst
                 timeoutInMilliseconds: 40000
             -
+                index: 2
                 device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800003-nst
                 timeoutInMilliseconds: 20000
             -
+                index: 3
                 device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800004-nst
