--- a/sources/common/pom.xml
+++ b/sources/common/pom.xml
@@ -34,6 +34,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>2.22.1</version>
                     <configuration>
+                        <runOrder>alphabetical</runOrder>
                         <parallel>classes</parallel>
                         <threadCount>1</threadCount>
                         <perCoreThreadCount>false</perCoreThreadCount>
