--- a/sources/workspace/workspace-rest/pom.xml
+++ b/sources/workspace/workspace-rest/pom.xml
@@ -157,6 +157,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<runOrder>alphabetical</runOrder>
 					<systemPropertyVariables>
 						<log4j.configurationFile>log4j2-test.xml</log4j.configurationFile>
 						<org.owasp.esapi.opsteam>AC001</org.owasp.esapi.opsteam>
