--- a/deployment/ansible-vitam/vitam.yml
+++ b/deployment/ansible-vitam/vitam.yml
@@ -148,11 +148,13 @@
   any_errors_fatal: true
   roles:
     - vitam
+    - timers
     - storage
   vars:
     vitam_struct: "{{ vitam.storageengine }}"
     vitam_certificate_client_type: "storage"
     vitam_timestamp_usage: secure-storage
+    timers_list: "{{ vitam_timers.storage }}"
 
 
 
@@ -161,9 +163,11 @@
   serial: 1
   roles:
     - vitam
+    - timers
     - metadata
   vars:
     vitam_struct: "{{ vitam.metadata }}"
+    timers_list: "{{ vitam_timers.metadata }}"
 
 
 - hosts: hosts-logbook
@@ -171,10 +175,12 @@
   serial: 1
   roles:
     - vitam
+    - timers
     - logbook
   vars:
     vitam_struct: "{{ vitam.logbook }}"
     vitam_timestamp_usage: secure-logbook
+    timers_list: "{{ vitam_timers.logbook }}"
 
 
 - hosts: hosts-workspace
@@ -190,9 +196,11 @@
   serial: 1
   roles:
     - vitam
+    - timers
     - functional_administration
   vars:
     vitam_struct: "{{ vitam.functional_administration }}"
+    timers_list: "{{ vitam_timers.functional_administration }}"
 
 
 - hosts: hosts-security-internal
