--- a/sources/storage/cas-manager/cas-tape-library/pom.xml
+++ b/sources/storage/cas-manager/cas-tape-library/pom.xml
@@ -44,6 +44,10 @@
             <artifactId>commons-compress</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.json-unit</groupId>
+            <artifactId>json-unit</artifactId>
+        </dependency>
 
     </dependencies>
 
