item 5606 : Tape catalog service

--- a/sources/storage/cas-manager/cas-tape-library/pom.xml
+++ b/sources/storage/cas-manager/cas-tape-library/pom.xml
@@ -23,6 +23,12 @@
 
         <dependency>
             <groupId>fr.gouv.vitam</groupId>
+            <artifactId>common-database-private</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>fr.gouv.vitam</groupId>
             <artifactId>common-junit</artifactId>
             <version>${project.version}</version>
             <scope>test</scope>
