--- a/sources/storage/cas-manager/vitam-offer/pom.xml
+++ b/sources/storage/cas-manager/vitam-offer/pom.xml
@@ -34,6 +34,11 @@
 			<artifactId>common-storage</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>fr.gouv.vitam</groupId>
+			<artifactId>cas-tape-library</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 		<!-- test -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -67,6 +72,12 @@
 			<groupId>fr.gouv.vitam</groupId>
 			<artifactId>vitam-driver</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.gouv.vitam</groupId>
+			<artifactId>cas-tape-library</artifactId>
+			<version>2.4.0-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
