item 5606 : Tape catalog service part 4

--- a/sources/storage/cas-manager/cas-tape-library/pom.xml
+++ b/sources/storage/cas-manager/cas-tape-library/pom.xml
@@ -27,6 +27,13 @@
             <version>${project.version}</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>fr.gouv.vitam</groupId>
+            <artifactId>storage-engine-common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>fr.gouv.vitam</groupId>
             <artifactId>common-junit</artifactId>
