--- a/deployment/ansible-vitam/roles/mongo_configure/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/mongo_configure/tasks/main.yml
@@ -39,7 +39,7 @@
       command: "mongo {{ ip_service }}:{{ mongodb.mongos_port }}/admin -u {{ mongodb[mongo_cluster_name].admin.user }} -p {{ mongodb[mongo_cluster_name].admin.password }} --quiet --eval 'db.help()'"
       register: mongo_authent_enabled
       failed_when: false
-      no_log: true
+      no_log: "{{ hide_passwords_during_deploy }}"
       tags:
         - update_mongodb_configuration
 
@@ -64,7 +64,7 @@
       set_fact:
         mongo_credentials: " -u {{ mongodb[mongo_cluster_name].admin.user }} -p {{ mongodb[mongo_cluster_name].admin.password }} --quiet"
       when: "mongo_authent_enabled.rc == 0"
-      no_log: true
+      no_log: "{{ hide_passwords_during_deploy }}"
       tags:
         - update_mongodb_configuration
 
@@ -102,7 +102,7 @@
 
     - name: Enable the sharding
       command: mongo {{ ip_service }}:{{ mongodb.mongos_port }}/admin {{ mongo_credentials }} {{ vitam_defaults.folder.root_path }}/app/mongos/enable-sharding.js
-      no_log: true
+      no_log: "{{ hide_passwords_during_deploy }}"
       tags:
         - update_mongodb_configuration
 
@@ -118,7 +118,7 @@
         - metadata
         - identity
         - report
-      no_log: true
+      no_log: "{{ hide_passwords_during_deploy }}"
       when: "mongo_cluster_name == 'mongo-data'"
       tags:
         - update_mongodb_configuration
@@ -128,7 +128,7 @@
       with_items:
         - admin
         - offer
-      no_log: true
+      no_log: "{{ hide_passwords_during_deploy }}"
       when: "mongo_cluster_name != 'mongo-data'"
       tags:
         - update_mongodb_configuration
@@ -240,7 +240,7 @@
         - metadata
         - identity
         - report
-      no_log: true
+      no_log: "{{ hide_passwords_during_deploy }}"
       when: "mongo_cluster_name == 'mongo-data'"
       tags:
         - update_mongodb_configuration
@@ -250,7 +250,7 @@
       with_items:
         - admin
         - offer
-      no_log: true
+      no_log: "{{ hide_passwords_during_deploy }}"
       when: "mongo_cluster_name != 'mongo-data'"
       tags:
         - update_mongodb_configuration
