--- a/deployment/ansible-vitam-extra/roles/reverse/tasks/main.yml
+++ b/deployment/ansible-vitam-extra/roles/reverse/tasks/main.yml
@@ -74,7 +74,8 @@
   copy:
     src: "{{ item }}"
     dest: "/var/www/html-{{ vitam_site_name }}/"
-    owner: "root"
+    owner: "{{ apache_user }}"
+    group: "{{ apache_group }}"
     mode: 0644
   with_items:
       - css
@@ -88,7 +89,8 @@
   template:
     src: "index.html.j2"
     dest: "/var/www/html-{{ vitam_site_name }}/index.html"
-    owner: "root"
+    owner: "{{ apache_user }}"
+    group: "{{ apache_group }}"
     mode: 0644
   tags:
     - update_package_vitam
@@ -146,7 +148,7 @@
     - update_package_vitam
   notify:
      - reload apache
-   
+
 - name: activate httpd configuration for debian
   file:
     src: /etc/{{ apache_service }}/{{ apache_conf_dir }}/{{ item }}
