Item #5439 - Generalization of Batch Processing Reports * Add BatchReport store API * Add Unit Tests

--- a/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
+++ b/vitam-conf-dev/conf/security-internal/personal-certificate-permissions.conf
@@ -105,4 +105,4 @@ permissionsWithoutPersonalCertificate:
   - 'preservationScenario:read'
   - 'preservation:update'
   - 'accessionregisterssymbolic:read'
-  - 'preservationreport:id:read'
+  - 'batchreport:id:read'
