--- a/deployment/ansible-vitam/roles/vitam/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/tasks/main.yml
@@ -143,7 +143,7 @@
     mode: "{{ vitam_defaults.folder.conf_permission }}"
   with_fileglob:
     - "{{ role_path }}/templates/{{ vitam_struct.vitam_component }}/*"
-  no_log: false # OMA test as there may be secrets in verbose output
+  no_log: "{{ hide_passwords_during_deploy }}" # OMA test as there may be secrets in verbose output
   tags:
     - update_vitam_configuration
   notify:
