--- a/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
+++ b/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
@@ -15,6 +15,8 @@ tapeLibraries:
             -
                 device: /dev/tape/by-id/scsi-1QUANTUM_B4D282EF285E4365BBA90000
                 mtxPath: "/usr/sbin/mtx"
+                timeoutInMilliseconds: 60000
+
 
         drives:
             -
