--- a/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
+++ b/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
@@ -37,3 +37,6 @@ tapeLibraries:
             -
                 index: 3
                 device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800004-nst
+
+inputDirectory: /tmp/in
+outputDirectory: /tmp/out
