--- a/deployment/ansible-vitam/roles/cerebro/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/cerebro/tasks/main.yml
@@ -10,9 +10,12 @@
 
 - name: install openjdk from jessie-backports (prerequisite for cerebro) only when Debian
   apt:
-    name: openjdk-8-jre-headless
+    name: "{{ item }}"
     state: latest
     default_release: jessie-backports
+  with_items:
+    - ca-certificates-java
+    - openjdk-8-jre-headless
   when: ansible_os_family == "Debian"
   notify:
     - restart cerebro
