--- a/deployment/ansible-vitam/roles/logstash/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/logstash/tasks/main.yml
@@ -12,11 +12,14 @@
     state: latest
   when: ansible_os_family == "RedHat"
 
-- name: install openjdk from jessie-backports only when Debian
+- name: install openjdk from jessie-backports (prerequisite for cerebro) only when Debian
   apt:
-    name: openjdk-8-jre-headless
+    name: "{{ item }}"
     state: latest
     default_release: jessie-backports
+  with_items:
+    - ca-certificates-java
+    - openjdk-8-jre-headless
   when: ansible_os_family == "Debian"
 
 - name: Install logstash package from repo
