--- a/deployment/ansible-vitam/roles/vitam/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/tasks/main.yml
@@ -1,11 +1,14 @@
 ---
 
 # FIXME : will need more testing to be sure it is mandatory here
-- name: install openjdk from jessie-backports only when Debian
+- name: install openjdk from jessie-backports (prerequisite for cerebro) only when Debian
   apt:
-    name: openjdk-8-jre-headless
+    name: "{{ item }}"
     state: latest
     default_release: jessie-backports
+  with_items:
+    - ca-certificates-java
+    - openjdk-8-jre-headless
   when: ansible_os_family == "Debian"
 
 
