Use vitam systemd service type=forking instead of simple

--- a/sources/access/access-external/access-external-rest/pom.xml
+++ b/sources/access/access-external/access-external-rest/pom.xml
@@ -159,6 +159,23 @@
 							</resources>
 						</configuration>
 					</execution>
+					<execution>
+						<id>copy-script-resources</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/script</outputDirectory>
+							<resources>
+								<resource>
+									<directory>${basedir}/src/main/script</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+
 				</executions>
 			</plugin>
 
@@ -181,18 +198,166 @@
 				<artifactId>rpm-maven-plugin</artifactId>
 				<configuration>
 					<disabled>false</disabled>
+					<licence>CeCILL 2.1</licence>
+					<distribution>Vitam Project</distribution>
+					<group>Application/Archiving</group>
+					<packager>Vitam Package Team</packager>
+					<defineStatements/>
+					<targetOS>linux</targetOS>
+					<requires>
+						<require>systemd</require>
+						<require>java-1.8.0</require>
+						<require>vitam-user-${unix.user}</require>
+					</requires>
+					<defaultDirMode>750</defaultDirMode>
+					<defaultFileMode>640</defaultFileMode>
+					<defaultUsername>${unix.user}</defaultUsername>
+					<defaultGroupname>${unix.group}</defaultGroupname>
+					<mappings>
+						<mapping>
+							<directory>/vitam/lib/${unix.name}</directory>
+							<artifact/>
+							<dependency/>
+						</mapping>
+						<mapping>
+							<directory>/vitam/conf/${unix.name}</directory>
+							<sources>
+								<source>
+									<location>${project.build.directory}/conf</location>
+								</source>
+							</sources>
+						</mapping>
+						<mapping>
+							<directory>/vitam/script/${unix.name}</directory>
+							<!-- OMA : change to 750 and change directive if not correct
+														<defaultFileMode>640</defaultFileMode>
+							-->
+							<filemode>750</filemode>
+							<username>${unix.user}</username>
+							<groupname>${unix.user}</groupname>
+							<sources>
+								<source>
+									<location>${project.build.directory}/script</location>
+								</source>
+							</sources>
+						</mapping>
+						<mapping>
+							<directory>/usr/lib/systemd/system/</directory>
+							<filemode>644</filemode>
+							<username>root</username>
+							<groupname>root</groupname>
+							<directoryIncluded>false</directoryIncluded>
+							<sources>
+								<source>
+									<location>${project.build.directory}/systemd</location>
+								</source>
+							</sources>
+						</mapping>
+					</mappings>
+					<!-- Systemd hook scriptlets -->
+					<postinstallScriptlet>
+						<script>%systemd_post vitam-${unix.name}.service</script>
+					</postinstallScriptlet>
+					<preremoveScriptlet>
+						<script>%systemd_preun vitam-${unix.name}.service</script>
+					</preremoveScriptlet>
+					<postremoveScriptlet>
+						<script>%systemd_postun vitam-${unix.name}.service</script>
+					</postremoveScriptlet>
 				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
 				<version>${jetty.version}</version>
 			</plugin>
+
 			<plugin>
 				<artifactId>jdeb</artifactId>
 				<groupId>org.vafer</groupId>
 				<configuration>
+					<snapshotExpand>true</snapshotExpand>
 					<skip>false</skip>
+					<controlDir>${project.build.directory}/control</controlDir>
+					<dataSet>
+
+						<!-- Artifacts -->
+						<data>
+							<src>${project.build.directory}/${project.build.finalName}.jar</src>
+							<type>file</type>
+							<mapper>
+								<type>perm</type>
+								<user>${unix.user}</user>
+								<group>${unix.group}</group>
+								<filemode>0644</filemode>
+								<prefix>/vitam/lib/${unix.name}/</prefix>
+							</mapper>
+						</data>
+
+						<data>
+							<src>${project.build.directory}/dependencies</src>
+							<type>directory</type>
+							<missingSrc>ignore</missingSrc>
+							<mapper>
+								<type>perm</type>
+								<user>${unix.user}</user>
+								<group>${unix.group}</group>
+								<filemode>0644</filemode>
+								<prefix>/vitam/lib/${unix.name}</prefix>
+							</mapper>
+						</data>
+						<data>
+							<src>${project.build.directory}/script</src>
+							<type>directory</type>
+							<missingSrc>ignore</missingSrc>
+							<mapper>
+								<type>perm</type>
+								<user>${unix.user}</user>
+								<group>${unix.group}</group>
+								<filemode>0755</filemode>
+								<prefix>/vitam/script/${unix.name}</prefix>
+							</mapper>
+						</data>
+						<data>
+							<src>${project.build.directory}/conf</src>
+							<type>directory</type>
+							<missingSrc>ignore</missingSrc>
+							<mapper>
+								<type>perm</type>
+								<user>${unix.user}</user>
+								<group>${unix.group}</group>
+								<filemode>0750</filemode>
+								<prefix>/vitam/conf/${unix.name}</prefix>
+							</mapper>
+						</data>
+						<data>
+							<src>${project.build.directory}/systemd/</src>
+							<type>directory</type>
+							<mapper>
+								<type>perm</type>
+								<user>${unix.user}</user>
+								<group>${unix.group}</group>
+								<filemode>0755</filemode>
+								<prefix>/lib/systemd/system/</prefix>
+							</mapper>
+						</data>
+
+						<!-- Additional templates -->
+						<data>
+							<type>template</type>
+							<paths>
+								<path>/vitam/tmp/${unix.name}</path>
+								<path>/vitam/log/${unix.name}</path>
+							</paths>
+							<mapper>
+								<type>perm</type>
+								<user>${unix.user}</user>
+								<group>${unix.group}</group>
+							</mapper>
+						</data>
+
+					</dataSet>
 				</configuration>
 			</plugin>
 
