--- a/sources/common/common-storage/src/test/resources/offer-tape-test.conf
+++ b/sources/common/common-storage/src/test/resources/offer-tape-test.conf
@@ -1,3 +1,21 @@
+topology:
+    -
+        buckets:
+            -
+              default-bucket:
+                  -
+
+            -
+        containers:
+            - 0_object
+            - 1_object
+        nbThreads: 3
+    -
+        containers:
+            - 0_others
+            - 1_others
+            -
+
 tapeBatches:
     -
         containers:
