item 5519 : read TAR from Tape => input/output folders config

--- a/sources/common/common-storage/src/test/resources/offer-tape-test.conf
+++ b/sources/common/common-storage/src/test/resources/offer-tape-test.conf
@@ -66,3 +66,6 @@ tapeLibraries:
                 device: /dev/nst7
             -
                 device: /dev/nst8
+
+inputTarStorageFolder: /tmp
+outputTarStorageFolder: /tmp
