Item #5559 : Refactor Audit Object Plugin and add DSL parameter * Add new Audit Objects Plugins * Use batch report module for report generation * Add DSL parameter batch query for audit type DSL * Externalise out of workflow DSL query construction * Add Threshold control in workflow * Update RAML doc * Remove mongo indexes for events.evIdProc on LFCs

--- a/doc/fr/rest/externe/libraries/examples/auditLaunchQuery.json
+++ b/doc/fr/rest/externe/libraries/examples/auditLaunchQuery.json
@@ -1,4 +1,19 @@
 {
-  auditType:"tenant",
-  objectId:"0"
+  "auditActions": "AUDIT_FILE_EXISTING",
+  "auditType": "dsl",
+  "query": {
+    "$roots": [],
+    "$query": [
+      {
+        "$in": {
+        "#operations": [
+            "aeaaaaaaaahgotryaauzialjp5zkhgiaaaaq",
+            "aecaaaaabohmh3nzab37maljtitg4viaaaaq",
+            "aedqaaaaaohmh3nzab37maljtithxsyaaaaq"
+          ]
+        }
+      }
+    ],
+    "$threshold": 1000
+  }
 }
