--- a/sources/worker/worker-core/src/main/resources/audit_check_object_plugin.properties
+++ b/sources/worker/worker-core/src/main/resources/audit_check_object_plugin.properties
@@ -11,3 +11,20 @@ AUDIT_CHECK_OBJECT.WARNING=Avertissement lors de l''audit de la vérification de
 AUDIT_CHECK_OBJECT.OK=Succès de l''audit de la vérification de fichiers
 AUDIT_CHECK_OBJECT.KO=Échec de l''audit de la vérification de fichiers
 AUDIT_CHECK_OBJECT.FATAL=Erreur fatale lors de l''audit de la vérification de fichiers
+
+AUDIT_FILE_EXISTING=Audit de l''existence des fichiers
+AUDIT_FILE_EXISTING.STARTED=Début de l''audit de l''existence des fichiers du groupe d''objet
+AUDIT_FILE_EXISTING.OK=Succès de l''audit de l''existence des fichiers du groupe d''objet
+AUDIT_FILE_EXISTING.KO=Échec de l''audit de l''existence des fichiers du groupe d''objet
+AUDIT_FILE_EXISTING.FATAL=Erreur fatale lors de l''audit de l''existence des fichiers du groupe d''objet
+
+AUDIT_FILE_INTEGRITY=Audit de l''intégrité des fichiers
+AUDIT_FILE_INTEGRITY.STARTED=Début de l''audit de l''intégrité des fichiers
+AUDIT_FILE_INTEGRITY.OK=Succès lors de l''audit de l''intégrité des fichiers
+AUDIT_FILE_INTEGRITY.KO=Échec de l''audit de l''intégrité des fichiers
+AUDIT_FILE_INTEGRITY.FATAL=Erreur fatale lors de l''audit de l''intégrité des fichiers
+
+AUDIT_CHECK_OBJECT.AUDIT_CHECK_OBJECT.OK=Succès de l''audit de l''existence et de l''intégrité des objets
+AUDIT_CHECK_OBJECT.AUDIT_CHECK_OBJECT.WARNING=Avertissement lors de l''audit de l''existence et de l''intégrité des objets
+AUDIT_CHECK_OBJECT.AUDIT_CHECK_OBJECT.KO=Échec de l''audit de l''existence et de l''intégrité des objets
+AUDIT_CHECK_OBJECT.AUDIT_CHECK_OBJECT.FATAL=Erreur technique lors de l''audit de l''existence et de l''intégrité des objets
