Add POJO for extraction Add union of types for merge values and fix some tests Fix code review Merge review fix

--- a/sources/functional-administration/functional-administration-common/src/main/resources/preservationscenario-es-mapping.json
+++ b/sources/functional-administration/functional-administration-common/src/main/resources/preservationscenario-es-mapping.json
@@ -65,9 +65,13 @@
                 "Args": {
                   "type": "text"
                 },
-                "DataToExtract": {
+                "FilteredExtractedObjectGroupData": {
+                  "type": "object"
+                },
+                "FilteredExtractedUnitData": {
                   "type": "object"
                 }
+
               }
             }
           }
