--- a/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
+++ b/sources/storage/cas-manager/cas-tape-library/src/test/resources/offer-tape-test.conf
@@ -3,47 +3,44 @@ inputTarStorageFolder: ""
 outputTarStorageFolder: ""
 maxTarEntrySize: 100000
 maxTarFileSize: 1000000
+
 topology:
   fileBuckets:
-    metadata: [units, objectGroup]
+    metadata: ['units', 'objectGroup']
     objects: ['object']
     default: []
   buckets:
-    test: [0]
-    admin: [1]
-    prod: [2,3,4,5,6,7,8,9]
+    test:
+      tenants: [0]
+      tarBufferingTimeoutInMinutes: 1
+    admin:
+      tenants: [1]
+      tarBufferingTimeoutInMinutes: 1
+    prod:
+      tenants: [2,3,4,5,6,7,8,9]
+      tarBufferingTimeoutInMinutes: 1
+
 tapeLibraries:
   TAPE_LIB_1:
     robots:
-      -
-        device: /dev/tape/by-id/scsi-1QUANTUM_B4D282EF285E4365BBA90000
+      - device: /dev/tape/by-id/scsi-1HP_MSL6000_Series_B4D2820010
         mtxPath: "/usr/sbin/mtx"
         timeoutInMilliseconds: 3600000
     drives:
-      -
-        index: 0
-        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800001-nst
+      - index: 0
+        device: /dev/tape/by-path/ip-143.126.93.181:3260-iscsi-iqn.2006-06.com.quadstor.vtl.LGE.drive1-lun-0-nst
         mtPath: "/bin/mt"
         ddPath: "/bin/dd"
         tarPath: "/bin/tar"
         timeoutInMilliseconds: 3600000
-      -
-        index: 1
-        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800002-nst
+      - index: 1
+        device: /dev/tape/by-path/ip-143.126.93.181:3260-iscsi-iqn.2006-06.com.quadstor.vtl.LGE.drive2-lun-0-nst
         mtPath: "/bin/mt"
         ddPath: "/bin/dd"
         tarPath: "/bin/tar"
         timeoutInMilliseconds: 3600000
-      -
-        index: 2
-        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800003-nst
-        mtPath: "/bin/mt"
-        ddPath: "/bin/dd"
-        tarPath: "/bin/tar"
-        timeoutInMilliseconds: 3600000
-      -
-        index: 3
-        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800004-nst
+      - index: 2
+        device: /dev/tape/by-path/ip-143.126.93.181:3260-iscsi-iqn.2006-06.com.quadstor.vtl.LGE.drive3-lun-0-nst
         mtPath: "/bin/mt"
         ddPath: "/bin/dd"
         tarPath: "/bin/tar"
