--- a/vitam-conf-dev/conf/offer/offer-tape.conf
+++ b/vitam-conf-dev/conf/offer/offer-tape.conf
@@ -3,28 +3,23 @@ inputTarStorageFolder: "/vitam/data/offer/inputTars"
 outputTarStorageFolder: "/vitam/data/offer/outputTars"
 maxTarEntrySize: 100000
 maxTarFileSize: 1000000
+
 topology:
   fileBuckets:
-    metadata:
-      - "units"
-      - "objectGroup"
-    objects:
-      - "object"
+    metadata: ['units', 'objectGroup']
+    objects: ['object']
     default: []
   buckets:
     test:
-      - 0
+      tenants: [0]
+      tarBufferingTimeoutInMinutes: 1
     admin:
-      - 1
+      tenants: [1]
+      tarBufferingTimeoutInMinutes: 1
     prod:
-      - 2
-      - 3
-      - 4
-      - 5
-      - 6
-      - 7
-      - 8
-      - 9
+      tenants: [2,3,4,5,6,7,8,9]
+      tarBufferingTimeoutInMinutes: 1
+
 tapeLibraries:
   TAPE_LIB_1:
     robots:
