--- a/vitam-conf-dev/conf/offer/offer-tape.conf
+++ b/vitam-conf-dev/conf/offer/offer-tape.conf
@@ -3,7 +3,6 @@ inputTarStorageFolder: "/vitam/data/offer/inputTars"
 outputTarStorageFolder: "/vitam/data/offer/outputTars"
 maxTarEntrySize: 100000
 maxTarFileSize: 1000000
-
 topology:
   fileBuckets:
     metadata: ['units', 'objectGroup']
@@ -23,20 +22,23 @@ topology:
 tapeLibraries:
   TAPE_LIB_1:
     robots:
-      - device: /dev/tape/by-id/scsi-1HP_MSL6000_Series_B4D2820010
+      - device: /dev/tape/by-id/scsi-1QUANTUM_B4D282EF285E4365BBA90000
         mtxPath: "/usr/sbin/mtx"
         timeoutInMilliseconds: 600000
 
     drives:
       - index: 0
-        device: /dev/tape/by-path/ip-143.126.93.181:3260-iscsi-iqn.2006-06.com.quadstor.vtl.LGE.drive1-lun-0-nst
+        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800001-nst
         mtPath: "/bin/mt"
         ddPath: "/bin/dd"
         tarPath: "/bin/tar"
         timeoutInMilliseconds: 600000
       - index: 1
-        device: /dev/tape/by-path/ip-143.126.93.181:3260-iscsi-iqn.2006-06.com.quadstor.vtl.LGE.drive2-lun-0-nst
+        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800002-nst
         timeoutInMilliseconds: 600000
       - index: 2
-        device: /dev/tape/by-path/ip-143.126.93.181:3260-iscsi-iqn.2006-06.com.quadstor.vtl.LGE.drive3-lun-0-nst
+        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800003-nst
+        timeoutInMilliseconds: 600000
+      - index: 3
+        device: /dev/tape/by-id/scsi-1IBM_ULT3580-TD6_B4D2800004-nst
         timeoutInMilliseconds: 600000
